fix overflow

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   background-repeat: repeat;
   font-family: Nevis;
   color: white;
+  overflow-x: hidden;
 }
 
 #navbar {
